--- a/docs/ツール/性能テスト/k6.md
+++ b/docs/ツール/性能テスト/k6.md
@@ -1,70 +1,118 @@
 # k6
 
 ## 概要
-k6 は JavaScript で性能テストを記述し、API や Web サービスの負荷特性を検証できるツールです。開発フローに組み込みやすく、自動化運用に向いています。
+k6 は、JavaScript で性能テストを記述し、API や Web サービスの負荷特性を検証できるツールである。開発フローに組み込みやすく、CI 主体の継続運用に向いている。
 
 ## 料金
-| プラン | 料金 | 備考 |
-|---|---:|---|
-| OSS | 無料 | ローカル/CI で利用可能 |
-| k6 Cloud | 有料 | 大規模実行・可視化・共有機能を提供 |
+
+| 区分 | 内容 |
+|------|------|
+| OSS | 無料（自己運用） |
+| k6 Cloud | 有料（大規模実行・可視化を拡張） |
 
 ## 主な特徴
-| 特徴 | 内容 |
-|---|---|
+
+| 項目 | 内容 |
+|------|------|
 | JavaScript 記述 | 開発者が扱いやすい |
-| 自動化適性 | CI/CD パイプラインに統合しやすい |
-| 指標設計 | 閾値を明示して合否判定しやすい |
+| 自動化適性 | CI/CD に統合しやすい |
+| 閾値判定 | SLO/SLA を明確に判定しやすい |
+| 実行速度 | 反復試験を回しやすい |
+| 開発親和性 | テスト資産をコードとして保守しやすい |
 
 ## 主な機能
-| 機能 | 用途 | 実務での使いどころ |
-|---|---|---|
-| 負荷モデル | 段階増加・一定・スパイク負荷 | リリース前検証 |
-| 閾値判定 | SLO/SLA 合否評価 | 自動ゲート判定 |
-| 結果出力 | 指標可視化と比較 | 回帰分析 |
+
+### 負荷試験機能
+
+| 機能 | 説明 |
+|------|------|
+| 負荷モデル設定 | 一定負荷・段階負荷・スパイクを定義 |
+| 仮想ユーザー実行 | 想定トラフィックを再現 |
+| シナリオ制御 | API 利用フローを継続的に検証 |
+
+### 判定機能
+
+| 機能 | 説明 |
+|------|------|
+| 閾値定義 | p95、失敗率、TPS で合否判定 |
+| 自動ゲート | 閾値超過時に失敗判定を返す |
+| 回帰検知 | 変更前後の性能差分を確認 |
+
+### 運用機能
+
+| 機能 | 説明 |
+|------|------|
+| CLI 実行 | ローカル/CI で同一手順を実行 |
+| 結果出力 | 指標を可視化して比較分析 |
+| 継続運用連携 | パイプラインに組み込んで定期検証 |
 
 ## インストールとセットアップ
-1. k6 実行環境を整えます。
-2. 対象 API、認証、テストデータ、目標指標を定義します。
-3. 負荷パターンと閾値を設定します。
+
+公式URL:
+- [k6 公式ドキュメント](https://grafana.com/docs/k6/latest/)
+- [k6 GitHub](https://github.com/grafana/k6)
+
+セットアップ手順:
+1. k6 実行環境とテスト対象情報を準備する。
+2. 認証、テストデータ、負荷パターンを定義する。
+3. 指標（p95、失敗率、TPS）と閾値を設定する。
 
 ## 基本的な使い方
-1. 想定トラフィックを試験シナリオに反映します。
-2. テストを実行して遅延・失敗率を確認します。
-3. 閾値超過時は原因を分析し、再試験で改善確認します。
+1. 想定トラフィックをシナリオに反映する。
+2. 試験を実行し、遅延・失敗率・スループットを確認する。
+3. 閾値超過時に原因を分析して改善する。
+4. 同条件で再試験し、改善結果を比較する。
+
+最小実行例:
+- ローカルで負荷試験を実行
+- CI で閾値判定を自動化
 
 ## メリット
-| 観点 | 内容 |
-|---|---|
-| 開発親和性 | JavaScript ベースでチーム導入しやすい |
-| 運用性 | CLI で自動化しやすい |
-| 判定明確化 | 閾値による機械的判定が可能 |
+
+- JavaScript ベースで開発チームが運用しやすい
+- 閾値判定で合否を機械的に判断しやすい
+- CLI 実行で CI/CD へ統合しやすい
+- 継続比較で性能劣化を追跡しやすい
 
 ## デメリット
-| 観点 | 内容 |
-|---|---|
-| 設計依存 | シナリオ品質が結果の妥当性を左右する |
-| 環境依存 | 実行基盤差異で結果がぶれやすい |
-| 可視化 | OSS 単体では運用可視化を追加設計する場合がある |
+
+- シナリオ設計の品質が結果妥当性を左右する
+- 実行環境差異で結果がぶれる場合がある
+- OSS 単体では可視化設計を追加することがある
 
 ## 他ツールとの比較
-| ツール | 強み | 使い分け |
-|---|---|---|
-| k6 | 開発フロー統合が容易 | CI 主体の継続性能検証 |
-| JMeter | GUI と情報量が豊富 | 非エンジニア含む運用 |
-| Gatling | 大規模負荷と分析力 | 高負荷中心の検証 |
-| Locust | Python で柔軟な定義 | Python エコシステム重視 |
+
+| ツール | 主な用途 | 特徴 |
+|------|------|------|
+| k6 | CI 主体性能試験 | JS 記述と閾値判定で自動化しやすい |
+| JMeter | GUI 性能試験 | 導入しやすく実績が豊富 |
+| Gatling | 高負荷性能試験 | 再現性と分析に強い |
+| Locust | Python 記述試験 | 業務シナリオを柔軟に表現可能 |
 
 ## ベストプラクティス
-1. 目標指標をテストコードとは別に管理し、変更影響を把握しやすくします。
-2. スモールテストから段階的に負荷を増やし、原因切り分けを容易にします。
-3. 結果は時系列で保存し、劣化トレンドを定点観測します。
+
+### 1. 指標管理を先に設計
+
+- 目標指標と閾値を先に固定する
+- テストコードと判定基準を分離して管理する
+
+### 2. 負荷を段階的に拡張
+
+- 小規模試験から本番想定へ拡張する
+- 異常発生点で原因を切り分ける
+
+### 3. 結果比較を継続運用
+
+- 試験結果を時系列で蓄積する
+- 劣化傾向を定点観測して早期に対応する
 
 ## 公式ドキュメント
-- https://grafana.com/docs/k6/latest/
-- https://github.com/grafana/k6
+
+- 公式: https://grafana.com/docs/k6/latest/
+- GitHub: https://github.com/grafana/k6
 
 ## まとめ
-1. k6 は自動化しやすく、開発チーム主導の性能テストに適したツールです。
-2. 実効性を高めるには、閾値管理と結果の継続比較を運用に組み込むことが重要です。
-3. 小規模から始めて段階的に負荷を上げることで、安定した性能改善サイクルを作れます。
+
+1. ** 自動化 ** : k6 は開発フローに組み込みやすく継続運用に向く。
+2. ** 判定性 ** : 閾値管理を明確化すると性能品質を安定して判断できる。
+3. ** 継続性 ** : 結果の時系列比較で性能劣化を早期に検知しやすい。
