--- a/docs/ツール索引.md
+++ b/docs/ツール索引.md
@@ -382,7 +382,7 @@
 
 ## 参考資料
 
-- [IPA 共通フレーム2013](https://www.ipa.go.jp/)
+- [IPA 共通フレーム2013](https://www.ipa.go.jp/archive/files/000027415.pdf)
 - [非機能要求グレード（IPA）](https://www.ipa.go.jp/archive/digital/iot-en-ci/jyouryuu/hikinou/ent03-b.html)
 - [AWS Well-Architected Framework](https://aws.amazon.com/architecture/well-architected/)
 - [Microsoft Azure Architecture Center](https://docs.microsoft.com/azure/architecture/)
